# kat_demo

./: .gitignore  premake5.lua  repo.toml
backend/: .env.example  .gitignore  README.md  pyproject.toml  run_server.py
backend/adk_chat_service/: __init__.py  config.py  main.py  models.py
backend/adk_chat_service/middleware/: __init__.py  cors.py
backend/adk_chat_service/routes/: __init__.py  chat.py  websocket.py
backend/adk_chat_service/services/: __init__.py  adk_agent.py  adk_client.py  kit_connection.py  session_manager.py  stream_handler.py
backend/adk_chat_service/tools/: __init__.py  base.py  registry.py  usd_tools.py
backend/adk_chat_service/utils/: __init__.py  exceptions.py  logger.py
source/: rendered_template_metadata.json
source/apps/: demo.composer.kit  demo.composer_streaming.kit
source/extensions/demo.chat_ui/: premake5.lua
source/extensions/demo.chat_ui/config/: extension.toml
source/extensions/demo.chat_ui/demo/: __init__.py
source/extensions/demo.chat_ui/demo/chat_ui/: __init__.py  backend_client.py  chat_window.py  extension.py  kit_tool_client.py  message_widget.py  usd_tools.py
source/extensions/demo.chat_ui/docs/: README.md
source/extensions/demo.composer_setup_extension/: premake5.lua
source/extensions/demo.composer_setup_extension/config/: extension.toml
source/extensions/demo.composer_setup_extension/demo/composer_setup_extension/: extension.py
